--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,77 @@
 body {
-    padding: 60px 0;
-    background-image: url(https://img.buenamente.co/id-6351d4df-86a3-433e-8e1b-1cfeb50bcac4/raw/s-72Nfyn9eBgHIH5RAt6VqqGQFfw7.gif);
-    background-attachment: fixed;
-    margin: 0 auto;
-    width: 600px;
-    margin-bottom: 40px;
-    background-size: cover;
-    background-repeat: no-repeat;
+  padding: 60px 0;
+  background-image: url(https://img.buenamente.co/id-6351d4df-86a3-433e-8e1b-1cfeb50bcac4/raw/s-72Nfyn9eBgHIH5RAt6VqqGQFfw7.gif);
+  background-attachment: fixed;
+  margin: 0 auto;
+  width: 600px;
+  margin-bottom: 40px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#title {
+  text-align: center;
+  font-size: xx-large;
+  font-size-adjust: initial;
+  font-family: 'Harry Potter', sans-serif;
+  @import url('http://fonts.cdnfonts.com/css/harry-potter');
+  color: rgb(198, 191, 52);
+  -webkit-text-stroke: 1.5px rgb(90, 90, 27);
+}
+
+#subTitle {
+  color: white;  
+  font-family:  'Overdose', sans-serif;
+  font-size: 30px;
+  @import url('http://fonts.cdnfonts.com/css/overdose');
+  
+}
+
+.container-gallery {
+  width: 100%;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: center;
+  }
+
+
+    .imageContainers{
+      width: 50%;
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-content: center;
+      border-radius: 20px;
+}
+img {
+  width: 100%;
+  height: 100%;
+  flex-wrap: wrap;
+  align-content: center;
+  border-radius: 20px;
+}
+
+.buttonImages {
+  font-family: 'SPQR', sans-serif;
+  @import url('http://fonts.cdnfonts.com/css/spqr');
+  font-size: 18px;
+  color: white;
+  padding: 0;
+  border: none;
+  background: none;
+  flex-wrap: wrap;
+  align-content: center;
+
+}
+
+
+.buttonImages:hover {
+
+transform: scale(1.15);
+cursor:url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png) ,
+pointer!important
 }
