Solucionamos lo de las imagenes y agregamos otras paginas html

--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
+/* * {
+  outline: 1px solid limegreen !important;
+} */
 body {
-  padding: 60px 0;
+  padding: 0 10%;
   background-image: url(https://img.buenamente.co/id-6351d4df-86a3-433e-8e1b-1cfeb50bcac4/raw/s-72Nfyn9eBgHIH5RAt6VqqGQFfw7.gif);
   background-attachment: fixed;
   margin: 0 auto;
-  width: 600px;
   margin-bottom: 40px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -20,41 +22,47 @@ body {
 }
 
 #subTitle {
-  color: white;  
-  font-family:  'Overdose', sans-serif;
-  font-size: 30px;
-  @import url('http://fonts.cdnfonts.com/css/overdose');
+  color: white;
+  -webkit-text-stroke: 0.5px rgb(104, 106, 106);
+  font-family: "Overdose", sans-serif;
+  font-size: 40px;
+  text-align: center;
+  @import url("http://fonts.cdnfonts.com/css/overdose");
+}
+
+#container-gallery {
+  width: 100%;
+  display: inline-flex;
+  margin-right: 5em;
+  justify-content: center;
+  flex-wrap: wrap;
+
+}
+
+.imageContainers {
+  width: 39%;
+  height: 39%;
+  margin: 1%;
+  display: flex;
+  border-radius: 20px;
   
 }
 
-.container-gallery {
-  width: 100%;
-  justify-content: space-between;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: wrap;
-  align-content: center;
-  }
-
-
-    .imageContainers{
-      width: 50%;
-      height: 50%;
-      display: flex;
-      flex-direction: column;
-      flex-wrap: nowrap;
-      align-content: center;
-      border-radius: 20px;
+#imageContainers {
+  width: 50%;
+  height: 50%;
+  margin-left: 25%;
 
 }
+
+.secondImages {
+  display: flex;
+}
+
 img {
   width: 100%;
   height: 100%;
-  flex-wrap: wrap;
-  align-content: center;
-  border-radius: 20px;
-  
+  border-radius: 20px;  
 }
 
 .buttonImages {
@@ -64,37 +72,31 @@ img {
   color: white;
   padding: 0;
   border: none;
-  background: none;
-  flex-wrap: wrap;
-  align-content: center;
-
+  background: none;  
 }
-
 
 .buttonImages:hover {
 
-transform: scale(1.15);
-cursor:url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png) ,
-pointer!important
+  transform: scale(1.15);
+  cursor: url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png),
+    pointer !important
 }
 
-.fourHouses  {
-  
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  width: 200%;
-  height: 200%;
-  display: flex;
-  
+.fourHouses {
 
+  display: flex;
+  width: 110%;
+  align-items: center;  
+  margin-right: 12%;
 }
+
 #charactersTitle {
-  color: white;  
-  font-family: 'SPQR', sans-serif;
+  -webkit-text-stroke: 0.2px rgba(104, 106, 106, 0.913);
+  font-size: 30px;
   font-size: 30px;
   text-align: center;
+  font-family: 'SPQR', sans-serif;
+  color: white;
   @import url('http://fonts.cdnfonts.com/css/spqr');
-  
 
 }
