--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ body {
   text-align: center;
   font-size: xx-large;
   font-size-adjust: initial;
-  font-family: 'Harry Potter', sans-serif;
+  font-family: 'Harry Potter',serif;
   @import url('http://fonts.cdnfonts.com/css/harry-potter');
   color: rgb(198, 191, 52);
   -webkit-text-stroke: 1.5px rgb(90, 90, 27);
@@ -109,6 +109,11 @@ img {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15px;
   text-align: start;
+  max-width: 100%;
+  max-height: 100%;
+  z-index: 1;
+  
+  
   
 }
 
@@ -122,6 +127,7 @@ img {
 
 #spellsTitle{
   color: azure;
+  -webkit-text-stroke: 0.2px rgba(104, 106, 106, 0.913);
   text-align: center;
   font-size: 100px;
   font-family: 'AuldMagick Bold', sans-serif;
@@ -131,8 +137,8 @@ img {
 #spellsSubTitle{
   color: white;  
   font-family: 'NIGHTMARE PILLS', sans-serif;
-  font-weight: bold;
-  font-size: 40px;
+  font-weight: bold;  
+  font-size: 35px;
   text-align: center;
   @import url('http://fonts.cdnfonts.com/css/nightmare-pills');
 }
@@ -144,29 +150,47 @@ img {
   pointer 
 }
 
-.indexButtonDiv{
-  display: flex;
-  justify-content: center;
+.indexButtonDiv {
+  align-items: baseline;
+  text-align: center;
+  opacity: 0.5;
+}
+
+.indexButtonDiv:hover{
+  transform: scale(1.15);
+  opacity: 1;
 
 }
 
-.indexButtonDiv:hover {
-  transition:inherit;  
-
-}
-.indexButton{
-  width: 35%;  
-  height: 51%;
-  align-items: center;
-  padding: 0;
-  border: none;
-  background: none;  
+.contenedor{
+  width: 15%;
+  height: 20%;
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  opacity: 0,5;
   
 }
 
-.indexButton:hover{
+.centrado{
+  font-size: 20px;
+  -webkit-text-stroke: 1px rgb(220, 192, 50);
+  color: rgb(9, 8, 7);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+}
 
-  
+.centrado:hover{
+  opacity: 1;
+  font-family: 'Goudy Medieval Alternate', sans-serif;
+ font-size: 23px;
+ font-weight: 5px bold; 
+ @import url('http://fonts.cdnfonts.com/css/goudy-mediaeval');
+ 
+
   cursor:url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png),
    pointer 
    
@@ -177,4 +201,77 @@ img {
   pointer 
 }
 
+.allTitles{
+  color:white;
+  text-align: center;  
+  font-family: 'AuldMagick Bold', sans-serif;
+  font-size: 100px;
+ @import url('http://fonts.cdnfonts.com/css/auldmagick'); 
+ 
+
+}
+.subTitleAll{
+  color:white;
+  text-align: center;
+  font-size: 35px;
+  font-family: 'NIGHTMARE PILLS', sans-serif;
+  @import url('http://fonts.cdnfonts.com/css/nightmare-pills');
+}
+
+
+
+ .allTables {
+  border: 5px inset rgb(110, 79, 18, 0.92);
+  margin: 2%;
+  padding-left: 2%;
+  height: 50%;
+  width: 70%;
+  color: black;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+  background-image: url("./img/fondoperg OP.png");
+border-radius: 30px 20px 30px 20px;
+line-height: 1.5;
+
+
   
+ } 
+
+ .curiosityTable {
+  border: 5px inset rgb(110, 79, 18, 0.92);
+  margin: 2%;
+  padding-left: 2%;
+  height: 50%;
+  width: 70%;
+  color: black;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+  background-image: url("./img/fondoperg OP.png");
+border-radius: 30px 20px 30px 20px;
+  
+ } 
+
+ .curiosityTable img {
+  width: 80%;
+  height: 80%;
+  margin-left: 8%;
+  
+ }
+
+ .spellDiv {
+  font-family: 'Raleway', sans-serif;
+  font-size: 15px;
+  text-align: start;
+  opacity: 1;
+  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+ }
+
+.allTables img {
+  width: 290px;
+  height: 290px;
+  align-content: flex-end;  
+  position: absolute;
+  margin-left: 18%;
+  margin-bottom: 22%;
+
+}
