--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   cursor: url(https://cdn.custom-cursor.com/db/cursor/32/Harry_Potter_Nimbus_2000_andGoldenSnitchCursor.png),
-  pointer ;
+    pointer;
 
 }
 
@@ -18,7 +18,7 @@ body {
   text-align: center;
   font-size: xx-large;
   font-size-adjust: initial;
-  font-family: 'Harry Potter',serif;
+  font-family: 'Harry Potter', serif;
   @import url('http://fonts.cdnfonts.com/css/harry-potter');
   color: rgb(198, 191, 52);
   -webkit-text-stroke: 1.5px rgb(90, 90, 27);
@@ -48,7 +48,7 @@ body {
   margin: 1%;
   display: flex;
   border-radius: 20px;
-  
+
 }
 
 #imageContainers {
@@ -65,7 +65,7 @@ body {
 img {
   width: 100%;
   height: 100%;
-  border-radius: 20px;  
+  border-radius: 20px;
 }
 
 .buttonImages {
@@ -75,7 +75,7 @@ img {
   color: white;
   padding: 0;
   border: none;
-  background: none;  
+  background: none;
 }
 
 .buttonImages:hover {
@@ -89,7 +89,7 @@ img {
 
   display: flex;
   width: 110%;
-  align-items: center;  
+  align-items: center;
   margin-right: 12%;
 }
 
@@ -104,20 +104,20 @@ img {
 
 }
 
-#charactersTable{
-  
+#charactersTable {
+
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15px;
   text-align: start;
   max-width: 100%;
   max-height: 100%;
   z-index: 1;
-  
-  
-  
+
+
+
 }
 
-.tableCharacter{
+.tableCharacter {
   border: 5px inset rgb(241, 233, 233);
   margin: 2%;
   padding-left: 2%;
@@ -125,29 +125,29 @@ img {
   width: 70%;
 }
 
-#spellsTitle{
+#spellsTitle {
   color: azure;
   -webkit-text-stroke: 0.2px rgba(104, 106, 106, 0.913);
   text-align: center;
   font-size: 100px;
   font-family: 'AuldMagick Bold', sans-serif;
- @import url('http://fonts.cdnfonts.com/css/auldmagick');                
+  @import url('http://fonts.cdnfonts.com/css/auldmagick');
 }
 
-#spellsSubTitle{
-  color: white;  
+#spellsSubTitle {
+  color: white;
   font-family: 'NIGHTMARE PILLS', sans-serif;
-  font-weight: bold;  
+  font-weight: bold;
   font-size: 35px;
   text-align: center;
   @import url('http://fonts.cdnfonts.com/css/nightmare-pills');
 }
 
-.spellsFooter{
+.spellsFooter {
   align-items: center;
   align-content: center;
-  cursor:url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png),
-  pointer 
+  cursor: url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png),
+    pointer
 }
 
 .indexButtonDiv {
@@ -157,23 +157,23 @@ img {
   margin-top: 18%;
 }
 
-.indexButtonDiv:hover{
+.indexButtonDiv:hover {
   transform: scale(1.15);
   opacity: 1;
 
 }
 
-.contenedor{
+.contenedor {
   width: 15%;
   height: 20%;
   position: relative;
   display: inline-block;
   text-align: center;
-  opacity: 0,5;
-  
+  opacity: 0, 5;
+
 }
 
-.centrado{
+.centrado {
   font-size: 20px;
   -webkit-text-stroke: 1px rgb(220, 192, 50);
   color: rgb(9, 8, 7);
@@ -184,35 +184,35 @@ img {
   opacity: 0;
 }
 
-.centrado:hover{
+.centrado:hover {
   opacity: 1;
   font-family: 'Goudy Medieval Alternate', sans-serif;
- font-size: 23px;
- font-weight: 5px bold; 
- @import url('http://fonts.cdnfonts.com/css/goudy-mediaeval');
- 
+  font-size: 23px;
+  font-weight: 5px bold;
+  @import url('http://fonts.cdnfonts.com/css/goudy-mediaeval');
 
-  cursor:url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png),
-   pointer 
-   
+
+  cursor: url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png),
+    pointer
 }
 
 .footer {
-  cursor:url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png),
-  pointer 
+  cursor: url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png),
+    pointer
 }
 
-.allTitles{
-  color:white;
-  text-align: center;  
+.allTitles {
+  color: white;
+  text-align: center;
   font-family: 'AuldMagick Bold', sans-serif;
   font-size: 100px;
- @import url('http://fonts.cdnfonts.com/css/auldmagick'); 
- 
+  @import url('http://fonts.cdnfonts.com/css/auldmagick');
+
 
 }
-.subTitleAll{
-  color:white;
+
+.subTitleAll {
+  color: white;
   text-align: center;
   font-size: 35px;
   font-family: 'NIGHTMARE PILLS', sans-serif;
@@ -221,54 +221,54 @@ img {
 
 
 
- .allTables {
+.allTables {
   border: 5px inset rgb(110, 79, 18, 0.92);
   margin: 2%;
   padding-left: 2%;
   height: 50%;
   width: 70%;
   color: black;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
   background-image: url("./img/fondoperg OP.png");
-border-radius: 30px 20px 30px 20px;
-line-height: 1.5;
+  border-radius: 30px 20px 30px 20px;
+  line-height: 1.5;
 
- } 
+}
 
- .curiosityTable {
+.curiosityTable {
   border: 5px inset rgb(110, 79, 18, 0.92);
   margin: 2%;
   padding-left: 2%;
   height: 50%;
   width: 70%;
   color: black;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
   background-image: url("./img/fondoperg OP.png");
-border-radius: 30px 20px 30px 20px;
-  
- } 
+  border-radius: 30px 20px 30px 20px;
 
- .curiosityTable img {
+}
+
+.curiosityTable img {
   width: 80%;
   height: 80%;
   margin-left: 8%;
-  
- }
 
- .spellDiv {
+}
+
+.spellDiv {
   font-family: 'Raleway', sans-serif;
   font-size: 15px;
   text-align: start;
   opacity: 1;
   @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
- }
+}
 
 .allTables img {
   width: 290px;
   height: 290px;
-  align-content: flex-end;  
+  align-content: flex-end;
   position: absolute;
   margin-left: 18%;
   margin-bottom: 22%;
@@ -278,7 +278,7 @@ border-radius: 30px 20px 30px 20px;
 .allTablesSly img {
   width: 290px;
   height: 290px;
-  align-content: flex-end;  
+  align-content: flex-end;
   position: absolute;
   margin-left: 16%;
   margin-bottom: 22%;
@@ -292,15 +292,15 @@ border-radius: 30px 20px 30px 20px;
   height: 50%;
   width: 70%;
   color: black;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
   background-image: url("./img/fondoperg OP.png");
- border-radius: 30px 20px 30px 20px;
- line-height: 1.5;
+  border-radius: 30px 20px 30px 20px;
+  line-height: 1.5;
 
- } 
+}
 
- footer {
+footer {
   text-align: center;
   color: white;
   width: 40%;
@@ -321,34 +321,33 @@ border-radius: 30px 20px 30px 20px;
   height: 50px;
   text-align: center;
   filter: invert(0.9) contrast(80%);
- 
+
 }
 
-.footerGit img:hover{
--webkit-transform: rotateY(180deg);
--webkit-transform-style: preserve-3d;
-transform: rotateY(180deg);
-transform-style: preserve-3d;
+.footerGit img:hover {
+  -webkit-transform: rotateY(180deg);
+  -webkit-transform-style: preserve-3d;
+  transform: rotateY(180deg);
+  transform-style: preserve-3d;
 
 }
 
 a {
-  color: aliceblue;  
-  cursor:url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png),
-   pointer !important
-   
+  color: aliceblue;
+  cursor: url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png),
+    pointer !important
 }
 
 .allTablesSpell img {
   width: 250px;
   height: 250px;
-  align-content: flex-end;   
+  align-content: flex-end;
   margin-left: 21%;
   margin-bottom: 0%;
   margin-top: 2%;
   position: absolute;
   float: inline-end;
-  
+
 }
 
 .allTablesSpell {
@@ -358,35 +357,44 @@ a {
   height: 50%;
   width: 70%;
   color: black;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
   background-image: url("./img/fondoperg OP.png");
-border-radius: 30px 20px 30px 20px;
-line-height: 1.5;
+  border-radius: 30px 20px 30px 20px;
+  line-height: 1.5;
 
 
- } 
+}
 
- .allTablesPot {
+.allTablesPot {
   border: 5px inset rgb(110, 79, 18, 0.92);
   margin: 2%;
   padding-left: 2%;
   height: 50%;
   width: 70%;
   color: black;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
   background-image: url("./img/fondoperg OP.png");
-border-radius: 30px 20px 30px 20px;
-  
- } 
+  border-radius: 30px 20px 30px 20px;
 
- .allTablesPot img {
+}
+
+.allTablesPot img {
   width: 23%;
   height: 23%;
   margin-left: 30%;
   position: absolute;
   margin-bottom: 80%;
-  
-  
- }
+
+
+}
+
+@font-face {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  ;
+  src: url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+  font-family: 'Harry Potter', serif;
+
+  src: url('http://fonts.cdnfonts.com/css/harry-potter')
+}
