--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   font-size: xx-large;
   font-size-adjust: initial;
   font-family: 'Harry Potter', serif;
-  @import url('http://fonts.cdnfonts.com/css/harry-potter');
+  @import url('https://fonts.cdnfonts.com/css/harry-potter');
   color: rgb(198, 191, 52);
   -webkit-text-stroke: 1.5px rgb(90, 90, 27);
 }
@@ -30,7 +30,7 @@ body {
   font-family: 'NIGHTMARE PILLS', sans-serif;
   font-size: 40px;
   text-align: center;
-  @import url('http://fonts.cdnfonts.com/css/nightmare-pills');
+  @import url('https://fonts.cdnfonts.com/css/nightmare-pills');
 }
 
 #container-gallery {
@@ -70,7 +70,7 @@ img {
 
 .buttonImages {
   font-family: 'SPQR', sans-serif;
-  @import url('http://fonts.cdnfonts.com/css/spqr');
+  @import url('https://fonts.cdnfonts.com/css/spqr');
   font-size: 18px;
   color: white;
   padding: 0;
@@ -100,7 +100,7 @@ img {
   text-align: center;
   font-family: 'SPQR', sans-serif;
   color: white;
-  @import url('http://fonts.cdnfonts.com/css/spqr');
+  @import url('https://fonts.cdnfonts.com/css/spqr');
 
 }
 
@@ -131,7 +131,7 @@ img {
   text-align: center;
   font-size: 100px;
   font-family: 'AuldMagick Bold', sans-serif;
-  @import url('http://fonts.cdnfonts.com/css/auldmagick');
+  @import url('https://fonts.cdnfonts.com/css/auldmagick');
 }
 
 #spellsSubTitle {
@@ -140,7 +140,7 @@ img {
   font-weight: bold;
   font-size: 35px;
   text-align: center;
-  @import url('http://fonts.cdnfonts.com/css/nightmare-pills');
+  @import url('https://fonts.cdnfonts.com/css/nightmare-pills');
 }
 
 .spellsFooter {
@@ -189,7 +189,7 @@ img {
   font-family: 'Goudy Medieval Alternate', sans-serif;
   font-size: 23px;
   font-weight: 5px bold;
-  @import url('http://fonts.cdnfonts.com/css/goudy-mediaeval');
+  @import url('https://fonts.cdnfonts.com/css/goudy-mediaeval');
 
 
   cursor: url(https://cdn.custom-cursor.com/db/pointer/32/Harry_Potter_Nimbus_2000_andGoldenSnitchPointer.png),
@@ -206,7 +206,7 @@ img {
   text-align: center;
   font-family: 'AuldMagick Bold', sans-serif;
   font-size: 100px;
-  @import url('http://fonts.cdnfonts.com/css/auldmagick');
+  @import url('https://fonts.cdnfonts.com/css/auldmagick');
 
 
 }
@@ -216,7 +216,7 @@ img {
   text-align: center;
   font-size: 35px;
   font-family: 'NIGHTMARE PILLS', sans-serif;
-  @import url('http://fonts.cdnfonts.com/css/nightmare-pills');
+  @import url('https://fonts.cdnfonts.com/css/nightmare-pills');
 }
 
 
@@ -312,7 +312,7 @@ footer {
   margin-left: 30%;
   font-family: 'BV Cursive Ital', sans-serif;
   font-size: 23px;
-  @import url('http://fonts.cdnfonts.com/css/bv-rondes');
+  @import url('https://fonts.cdnfonts.com/css/bv-rondes');
 }
 
 .footerGit img {
@@ -388,13 +388,4 @@ a {
   margin-bottom: 80%;
 
 
-}
-
-@font-face {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  ;
-  src: url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-  font-family: 'Harry Potter', serif;
-
-  src: url('http://fonts.cdnfonts.com/css/harry-potter')
 }
