--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   margin-bottom: 40px;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   cursor: url(https://cdn.custom-cursor.com/db/cursor/32/Harry_Potter_Nimbus_2000_andGoldenSnitchCursor.png),
     pointer;
 
@@ -93,55 +94,7 @@ img {
   margin-right: 12%;
 }
 
-#charactersTitle {
-  -webkit-text-stroke: 0.2px rgba(104, 106, 106, 0.913);
-  font-size: 30px;
-  font-size: 30px;
-  text-align: center;
-  font-family: 'SPQR', sans-serif;
-  color: white;
-  @import url('https://fonts.cdnfonts.com/css/spqr');
 
-}
-
-#charactersTable {
-
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  text-align: start;
-  max-width: 100%;
-  max-height: 100%;
-  z-index: 1;
-
-
-
-}
-
-.tableCharacter {
-  border: 5px inset rgb(241, 233, 233);
-  margin: 2%;
-  padding-left: 2%;
-  height: 50%;
-  width: 70%;
-}
-
-#spellsTitle {
-  color: azure;
-  -webkit-text-stroke: 0.2px rgba(104, 106, 106, 0.913);
-  text-align: center;
-  font-size: 100px;
-  font-family: 'AuldMagick Bold', sans-serif;
-  @import url('https://fonts.cdnfonts.com/css/auldmagick');
-}
-
-#spellsSubTitle {
-  color: white;
-  font-family: 'NIGHTMARE PILLS', sans-serif;
-  font-weight: bold;
-  font-size: 35px;
-  text-align: center;
-  @import url('https://fonts.cdnfonts.com/css/nightmare-pills');
-}
 
 .spellsFooter {
   align-items: center;
@@ -223,16 +176,22 @@ img {
 
 .allTables {
   border: 5px inset rgb(110, 79, 18, 0.92);
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
   margin: 2%;
   padding-left: 2%;
   height: 50%;
-  width: 70%;
+  max-width: 600px;
   color: black;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
   background-image: url("./img/fondoperg OP.png");
   border-radius: 30px 20px 30px 20px;
   line-height: 1.5;
+  padding-left: 15px;
+  padding-right: 15px;
+
 
 }
 
@@ -254,51 +213,17 @@ img {
   width: 80%;
   height: 80%;
   margin-left: 8%;
+  margin-right: 8%;
 
 }
 
-.spellDiv {
-  font-family: 'Raleway', sans-serif;
-  font-size: 15px;
-  text-align: start;
-  opacity: 1;
-  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-}
 
 .allTables img {
-  width: 290px;
-  height: 290px;
-  align-content: flex-end;
-  position: absolute;
-  margin-left: 18%;
-  margin-bottom: 22%;
+  width: 250px;
+  height: 250px;
 
 }
 
-.allTablesSly img {
-  width: 290px;
-  height: 290px;
-  align-content: flex-end;
-  position: absolute;
-  margin-left: 16%;
-  margin-bottom: 22%;
-
-}
-
-.allTablesSly {
-  border: 5px inset rgb(110, 79, 18, 0.92);
-  margin: 2%;
-  padding-left: 2%;
-  height: 50%;
-  width: 70%;
-  color: black;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-  background-image: url("./img/fondoperg OP.png");
-  border-radius: 30px 20px 30px 20px;
-  line-height: 1.5;
-
-}
 
 footer {
   text-align: center;
@@ -338,54 +263,50 @@ a {
     pointer !important
 }
 
-.allTablesSpell img {
-  width: 250px;
-  height: 250px;
-  align-content: flex-end;
-  margin-left: 21%;
-  margin-bottom: 0%;
-  margin-top: 2%;
-  position: absolute;
-  float: inline-end;
+
+@media screen and (max-width: 670px) {
+
+  .allTables {
+
+    align-items: center;
+    flex-direction: column;
+
+  }
+
+  .allTitles {
+    font-size: 50px;
+  }
 
 }
 
-.allTablesSpell {
-  border: 5px inset rgb(110, 79, 18, 0.92);
-  margin: 2%;
-  padding-left: 2%;
-  height: 50%;
-  width: 70%;
-  color: black;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-  background-image: url("./img/fondoperg OP.png");
-  border-radius: 30px 20px 30px 20px;
-  line-height: 1.5;
+@media screen and (min-width: 900px) {
+
+  .allTables img {
+
+    width: 300px;
+    height: 300px;
+
+  }
 
 
 }
 
-.allTablesPot {
-  border: 5px inset rgb(110, 79, 18, 0.92);
-  margin: 2%;
-  padding-left: 2%;
-  height: 50%;
-  width: 70%;
-  color: black;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-  background-image: url("./img/fondoperg OP.png");
-  border-radius: 30px 20px 30px 20px;
+
+@media screen and (max-width: 900px) {
+
+  .allTitles {
+    font-size: 60px;
+  }
+
 
 }
 
-.allTablesPot img {
-  width: 23%;
-  height: 23%;
-  margin-left: 30%;
-  position: absolute;
-  margin-bottom: 80%;
+@media screen and (max-width: 400px) {
 
+  .fourHouses {
+
+    width: 100%;
+
+  }
 
 }
